OPM-5: Updated service class added some functionalities in it, and written Unit test cases